--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+
 }
+
 body {
   background-color: #ffdeca;
 }
+
 h1 {
   text-align: center;
   margin: 20px;
@@ -12,33 +15,54 @@ h1 {
   text-transform: uppercase;
   text-decoration: underline;
 }
+
 .container {
   display: flex;
   flex-wrap: wrap;
   max-width: 80%;
   margin: auto;
 }
+
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin: 20px auto;
   max-width: 300px;
   background: coral;
   box-shadow: 3px 2px 3px silver;
-  transition: all 0.3s ease-in-out;
+  transform: all 0.3s ease-in-out;
+
 }
+
+.cardContent {
+  height: 300px;
+}
+
+.biowrap {
+  color: whitesmoke;
+  margin: 15px;
+  text-align: justify;
+}
+
 .card:hover {
   transform: scale(1.03);
   box-shadow: 5px 5px 10px whitesmoke;
+
 }
+
 .textGroup {
   padding: 10px 0;
   text-align: center;
   color: white;
 }
+
 .infoText {
   margin: 20px 0;
   font-size: 20px;
   font-weight: 700;
 }
+
 .action {
   margin-top: 50px;
   padding: 20px;
@@ -47,6 +71,7 @@ h1 {
   align-items: center;
   justify-content: space-between;
 }
+
 .actionBtn {
   width: 90%;
   margin: auto;
@@ -57,5 +82,7 @@ h1 {
   outline: none;
   cursor: pointer;
   border-radius: 3px;
-  transition: all 0.3s ease;
+  transition: all 0.3 ease;
+
+
 }
